<resources>
    <string name="app_name">DiabloCubeResurrected</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="background_fire_image_desc">Background fire image</string>
    <string name="welcome_button_start">I am ready!</string>
    <string name="welcome_page_1_title">Welcome  traveller!</string>
    <string name="welcome_page_1_subtitle">You are now arrived to an app representing horadric cube recipes</string>
    <string name="welcome_page_2_title">Features</string>
    <string name="welcome_page_2_subtitle">Here you can easily check all cube recipes and also have a chat with other fellow travellers</string>
    <string name="welcome_page_3_title">Have a nice time</string>
    <string name="welcome_page_3_subtitle">Remember, you are always welcome  here</string>
    <string name="cube_bottomnav">Cube Recipes</string>
    <string name="community_bottomnav">Community chat</string>
    <string name="settings_bottomnav">Settings</string>
    <string name="chat_rooms_title">Chat Rooms</string>
    <string name="conversations_title">Conversations</string>
    <string name="search_results_counter">Total recipes: %1$s</string>
    <string name="search_runewords_results_counter">Total Runewords: %1$s</string>
    <string name="icon">Item icon</string>
    <string name="text_stub">Test text for testing tests</string>
    <string name="chat_rooms_header">Chats</string>
    <string name="app_title">DIABLO</string>
    <string name="app_subtitle">cube resurrected</string>
    <string name="settings_title">- SETTINGS -</string>
    <string name="profile_button">Profile</string>
    <string name="about_button">About</string>
    <string name="need_to_login">To be able to edit your profile, you need to log in to chats first.</string>
    <string name="dismiss_snack">Dismiss</string>
    <string name="about_app">Hello friend!\nPlease report any suggestions or bugs you found to in-app group chat \"App feedback\" or feel free to send an email to app.diablocube@yahoo.com
    \n\nApp was intended to be just a nice representation of cube recipes and not an overall diablo database resource, but it can be added later if there will be any API with all data.
    \n\nCurrent development plan can include:
    \n-improve current cube view (recipe filters, add recipe inputs instead of list selection, etc.)
    \n-add runewords
    \n-add localization(probably ru first)
    \n-etc
    \n\nRemember, you are welcome here! There will be a minimum ads possible(currently one banner and support ad at settings page, that should not affect app experience)
    \n\n\nAll used images and item text are copyright of Blizzard Entertainment.
    \n\n\n\nPrivacy policy
    \nhttps://www.termsfeed.com/live/6a05b0ec-bf63-4ec1-b4e8-3e4e07d5b9a4</string>
    <string name="select_recipe_button">Select recipe from a list</string>
    <string name="result_image">Item result image</string>
    <string name="count_stub">x 1</string>
    <string name="count_text">x %1$s</string>
    <string name="item_info">- Item info -</string>
    <string name="stats_title">Stats:</string>
    <string name="used_in_recipes">Can be used to create:</string>
    <string name="search_icon_description">Search recipes</string>
    <string name="search_tooltip">Search by name</string>
    <string name="support_button">Support - watch an Ad</string>
    <string name="rune_words">Runewords</string>
    <string name="select_runeword_button">Select from a Runewords list</string>
    <string name="text_short_stub">short testing test</string>
    <string name="rune_stub">El</string>
    <string name="search_runes_tooltip">name, input type, sockets number…</string>
    <string name="used_with">Can be used with:</string>
</resources>