<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/cube_recipes_page"
        android:enabled="true"
        android:icon="@drawable/ic_cube"
        android:title="@string/cube_bottomnav"/>
    <item
        android:id="@+id/runeWordsFragment"
        android:enabled="true"
        android:icon="@drawable/runepul_graphic"
        android:title="@string/rune_words"
        />
    <item
        android:id="@+id/community_page"
        android:enabled="true"
        android:icon="@drawable/ic_messages"
        android:title="@string/community_bottomnav"/>
    <item
        android:id="@+id/settings_page"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_bottomnav"/>
</menu>