<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/top_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.settings.SettingsFragment">

    <ImageView
        android:id="@+id/top_fire"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings_top_fire"
        android:contentDescription="@string/background_fire_image_desc" />


    <TextView
        android:id="@+id/app_name_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal|top"
        android:textAppearance="@style/WelcomeTitleStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_title" />

    <TextView
        android:id="@+id/app_name_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal|top"
        android:textAppearance="@style/AppSubTitleStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_title"
        android:text="@string/app_subtitle" />

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal|top"
        android:textAppearance="@style/SettingsTitleStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_subtitle"
        android:text="@string/settings_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:layout_marginTop="75dp"
        android:text="@string/profile_button"
        android:textAppearance="@style/ButtonTextStyle"
        android:textColor="@color/orange"
        app:icon="@drawable/ic_profile_button"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@color/transparent"
        app:iconTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_title"
        app:rippleColor="@color/red" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/about_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:layout_marginTop="15dp"
        android:text="@string/about_button"
        android:textAppearance="@style/ButtonTextStyle"
        android:textColor="@color/orange"
        app:icon="@drawable/ic_about_button"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@color/transparent"
        app:iconTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_button"
        app:rippleColor="@color/red" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3489954973980283/7957338574"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
