<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/top_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.cube.CubeFragment">

    <ImageView
        android:id="@+id/main_cube_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/background_fire_image_desc"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/app_name_title"
        app:srcCompat="@drawable/cube_background" />

    <TextView
        android:id="@+id/app_name_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal|top"
        android:text="@string/app_title"
        android:textAppearance="@style/WelcomeTitleStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal|top"
        android:textAppearance="@style/AppSubTitleStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_title"
        android:text="@string/app_subtitle" />

    <ImageView
        android:id="@+id/top_fire"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_top_fire"
        android:contentDescription="@string/background_fire_image_desc" />

    <ImageView
        android:id="@+id/item_result_image"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/result_image"
        app:layout_constraintEnd_toEndOf="@id/select_recipe_button"
        app:layout_constraintStart_toStartOf="@id/select_recipe_button"
        app:layout_constraintTop_toBottomOf="@id/select_recipe_button" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/select_recipe_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginTop="125dp"
        android:text="@string/select_recipe_button"
        android:textAppearance="@style/ButtonTextStyle"
        android:textColor="@color/orange"
        app:icon="@drawable/convert_icon"
        app:iconPadding="12dp"
        app:iconSize="24dp"
        app:iconTint="@color/transparent"
        app:iconTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_cube_background"
        app:rippleColor="@color/red" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_inputs_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_result_image"
        tools:listitem="@layout/list_recipe_item"
        tools:orientation="vertical" />

</androidx.constraintlayout.widget.ConstraintLayout>