<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.runewords.RuneWordsListFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/recipes_counter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="start|center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/search_results_counter"
            android:textAppearance="@style/WelcomeSubTitleStyle"
            tools:text="@string/search_results_counter" />


    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipes_search_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:gravity="start|center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gold_yellow"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:endIconContentDescription="@string/search_icon_description"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:errorEnabled="false"
        app:expandedHintEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:startIconDrawable="@drawable/ic_baseline_search_24"
        app:startIconTint="@color/white">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/recipes_search_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_runes_tooltip"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/gold_yellow" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_recipes_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipes_search_field"
        tools:listitem="@layout/list_runeword_item"
        tools:orientation="vertical" />


</androidx.constraintlayout.widget.ConstraintLayout>